# bliep

./: .gitignore  CMakeLists.txt  README.md  compile.ps1  rebuild.ps1
assets/shaders/: default.fs  default.vs  flat.fs  flat.vs
assets/textures/: Groningers zijn moedeloos, machteloos - NRC.html
cmake/: FindASSIMP.cmake  FindGL.cmake  FindSDL2.cmake
libs/glm/detail/: setup.hpp
src/: debug_components.h  debug_systems.cpp  debug_systems.h  main.cpp  main.h  program.cpp
src/components/: camera.h  mesh_renderer.h  transform.h
src/core/: engine.cpp  engine.h  input.cpp  input.h  logger.cpp  logger.h  timer.cpp  timer.h  window.cpp  window.h
src/ecs/: component.cpp  component.h  entity.cpp  entity.h  system.cpp  system.h
src/graphics/: material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  render_system.cpp  render_system.h  shader.cpp  shader.h  texture.cpp  texture.h
src/math/: math.cpp  math.h
src/resource/: asset.h  asset_loader.h  asset_manager.cpp  asset_manager.h  model_loader.cpp  model_loader.h  shader_loader.cpp  shader_loader.h  texture_loader.cpp  texture_loader.h
src/types/: color.h  rectangle.h
src_old/: Asset.h  Camera.cpp  Camera.h  CameraController.h  CameraControllerSystem.cpp  CameraControllerSystem.h  CameraSystem.cpp  CameraSystem.h  Component.h  Display.cpp  Display.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Factory.h  InputManager.cpp  InputManager.h  Light.h  LightSystem.cpp  LightSystem.h  Logger.cpp  Logger.h  Main.cpp  Main.h  Material.cpp  Material.h  MaterialFactory.cpp  MaterialFactory.h  Math.cpp  Math.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelFactory.cpp  ModelFactory.h  ModelRenderSystem.cpp  (+19 more)
(+6 files in other folders)
